--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-number-format": "^4.7.3",
     "react-plotly.js": "^2.5.1",
+    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
