--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "plotly.js": "^2.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lines-ellipsis": "^0.15.0",
     "react-number-format": "^4.7.3",
     "react-plotly.js": "^2.5.1",
     "react-responsive": "^9.0.0-beta.5",
