--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -4,7 +4,7 @@ FROM node:14.9.0-buster-slim
 RUN set -ex; \
     apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y --no-install-recommends openssl git && \
+    apt-get install -y --no-install-recommends openssl && \
     useradd -ms /bin/bash app -d /home/app -G sudo -u 2000 -p "$(openssl passwd -1 Passw0rd)" && \
     mkdir -p /app && \
     chown app:app /app
